<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_diseases"
        android:textAppearance="@style/Body1_Normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:layout_marginTop="10dp"
        app:chipSpacingVertical="0dp"
        android:id="@+id/chip_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diabetes" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hypertension" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reflux_esophagitis" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urinary_stone" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon_polyp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip6"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chronic_viral_infection" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip7"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intestinal_disease" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip8"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gallstone" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip9"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_cirrhosis" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chip10"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thyroid_disease" />



    </com.google.android.material.chip.ChipGroup>




</androidx.constraintlayout.widget.ConstraintLayout>