<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_fatigue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/fatigue_symptoms"
        android:textAppearance="@style/Body1_Normal"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageButton
        android:layout_marginEnd="20dp"
        android:id="@+id/btn_symptom"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <LinearLayout
        android:id="@+id/layout_fatigue"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/btn_symptom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <com.teammeditalk.medicalconnect.ui.util.SelectCategory
            app:titleTag="symptom_fatigue"
            app:categoryTitle="@string/symptom_fatigue"
            android:tag="symptom_fatigue_desc"
            app:categoryContent="@string/symptom_fatigue_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.teammeditalk.medicalconnect.ui.util.SelectCategory
            app:titleTag="symptom_headache_dizziness"
            app:categoryTitle="@string/symptom_headache_dizziness"
            android:tag="symptom_headache_dizziness_desc"
            app:categoryContent="@string/symptom_headache_dizziness_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.teammeditalk.medicalconnect.ui.util.SelectCategory
            app:categoryTitle="@string/symptom_muscle_pain"
            app:titleTag="symptom_muscle_pain"
            android:tag="symptom_muscle_pain_desc"
            app:categoryContent="@string/symptom_muscle_pain_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.teammeditalk.medicalconnect.ui.util.SelectCategory
            app:categoryTitle="@string/symptom_insomnia"
            app:titleTag="symptom_insomnia"
            android:tag="symptom_insomnia_desc"
            app:categoryContent="@string/symptom_insomnia_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.teammeditalk.medicalconnect.ui.util.SelectCategory
            app:titleTag="symptom_weight_change"
            app:categoryTitle="@string/symptom_weight_change"
            android:tag="symptom_weight_change_desc"
            app:categoryContent="@string/symptom_weight_change_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>