<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancer"
        android:textAppearance="@style/Body1_Normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        app:chipSpacingVertical="0dp"
        android:id="@+id/chip_group"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            android:tag="stomach_cancer"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stomach_cancer" />

        <com.google.android.material.chip.Chip
            style="@style/CustomChipStyle"
            android:id="@+id/chip2"
            android:tag="liver_cancer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liver_cancer" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            style="@style/CustomChipStyle"
            android:tag="colorectal_cancer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colorectal_cancer" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            android:tag="lung_cancer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomChipStyle"
            android:text="@string/lung_cancer" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip6"
            android:tag="pancreatic_cancer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomChipStyle"
            android:text="@string/pancreatic_cancer" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip7"
            android:tag="oral_cancer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomChipStyle"
            android:text="@string/oral_cancer" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip8"
            android:tag="breast_cancer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomChipStyle"
            android:text="@string/breast_cancer" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chip9"
            android:tag="thyroid_cancer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomChipStyle"
            android:text="@string/thyroid_cancer" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip10"
            android:tag="skin_cancer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomChipStyle"
            android:text="@string/skin_cancer" />

        <com.google.android.material.chip.Chip
            android:tag="cervical_cancer"
            android:id="@+id/chip11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/CustomChipStyle"
            android:text="@string/cervical_cancer" />

    </com.google.android.material.chip.ChipGroup>


</androidx.constraintlayout.widget.ConstraintLayout>